<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rcl_executor_examples</name>
  <version>0.0.1</version>
  <description>RCL-Executor examples</description>
  <maintainer email="jan.staschulat@de.bosch.com">Jan Staschulat</maintainer>
  <license>Apache-2.0</license>
  <author>Jan Staschulat</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>rcl_executor</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rcl</exec_depend>
  <exec_depend>rcl_executor</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

